tests/paczka1/fuzzy1/61577064.err
Error in line 14: vvfGMCMD A93 30,7
Error in line 19: Gr8CRuAEn4B A293 5,3
Error in line 33: vvfGMCMD A293 71,8
Error in line 37: m0c6Xmy2W S447 76,7
